@@ -63,8 +63,8 @@ Vendor: Supermicro
     DIMMA 1A: 0.2.0, 0.3.0; DIMMA 1B: 0.2.1, 0.3.1;
     DIMMB 2A: 1.0.0, 1.1.0; DIMMB 2B: 1.0.1, 1.1.1;
     DIMMB 1A: 1.2.0, 1.3.0; DIMMB 1B: 1.2.1, 1.3.1;
-    DIMMC 2A: 2.0.0, 2.1.0; DIMMC 2B: 2.0.1, 2.1.1;
-    DIMMC 1A: 2.2.0, 2.3.0; DIMMC 1B: 2.2.1, 2.3.1;
-    DIMMD 2A: 3.0.0, 3.1.0; DIMMD 2B: 3.0.1, 3.1.1;
-    DIMMD 1A: 3.2.0, 3.3.0; DIMMD 1B: 3.2.1, 3.3.1;
+    DIMMD 2A: 2.0.0, 2.1.0; DIMMD 2B: 2.0.1, 2.1.1;
+    DIMMD 1A: 2.2.0, 2.3.0; DIMMD 1B: 2.2.1, 2.3.1;
+    DIMMC 2A: 3.0.0, 3.1.0; DIMMC 2B: 3.0.1, 3.1.1;
+    DIMMC 1A: 3.2.0, 3.3.0; DIMMC 1B: 3.2.1, 3.3.1;
 
